# formerbox

./: .dockerignore  .env  .envrc  .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  bart-config.yml  commands.sh  docker-compose.yml  model-config.yml  pyproject.linux.toml  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
changelog/: cz_formerbox.py  cz_gitnetic.py  setup.py
docs/cli/: convert_dataset.rst  preprocess.rst  train.rst  train_tokenizer.rst
docs/tasks/: base_transformers.md
formerbox/: __init__.py  __main__.py
formerbox/cli/: __init__.py  convert_dataset.py  preprocess.py  subcommand.py  train.py  train_tokenizer.py
formerbox/cli/functional/: __init__.py  preprocess.py
formerbox/common/: __init__.py  dataclass_argparse.py  from_partial.py  has_params.py  partial_initable.py  registrable.py
formerbox/contrib/: __init__.py  lightning_trainer.py
formerbox/data/: __init__.py  binarizer.py  binarizer_default.py  binarizer_seq2seq.py  binarizer_translation.py  data_collator.py  dataset_converter.py  dataset_iterators.py  indexed_dataset.py  indexed_dataset_setup.py  mmap_dataset.py  seq2seq_dataset.py  translation_dataset.py
formerbox/data/samplers/: __init__.py  (+3 more)
formerbox/modules/: __init__.py  denoising_datamodule.py  denoising_module.py  lightning_module_mixin.py  masked_lm_datamodule.py  masked_lm_module.py  seq2seq_datamodule.py  seq2seq_module.py  tokenizer_module.py  tokenizer_trainer.py  transformer_datamodule.py  transformer_module.py  translation_datamodule.py  translation_module.py  utils.py  word_lm_datamodule.py  word_lm_module.py
formerbox/optim/: __init__.py  optimization.py
formerbox/tasks/: __init__.py  denoising_task.py  masked_lm_task.py  seq2seq_task.py  task_module.py  tokenization_bart.py  tokenization_bart_trainer.py  tokenization_base.py  tokenization_gpt2.py  tokenization_roberta.py  tokenization_roberta_trainer.py  tokenization_seq2seq.py  tokenization_trainer.py  transformer_task.py  transformer_tokenization.py  transformer_tokenizer_module.py  translation_task.py  word_lm_task.py
formerbox/training/: __init__.py  load_from_config.py  transformer_trainer.py
formerbox/utils/: __init__.py  code_tokenizer.py  git_repo_extractor.py  py_parser.py  utils.py
gitnetic/: __main__.py
gitnetic/cli/: __init__.py  convert_dataset.py  preprocess.py  pretokenize.py  subcommand.py  train.py  train_tokenizer.py
gitnetic/common/: dataclass_argparse.py  from_args.py  has_params.py  partial_initable.py  registrable.py  utils.py
gitnetic/data/: __init__.py  binarizer.py  data_iterators.py  dataset_converter.py  dataset_iterators.py  indexed_dataset.py  indexed_dataset_setup.py  mmap_dataset.py
gitnetic/optim/: __init__.py  optimization.py
gitnetic/tasks/: __init__.py
gitnetic/utils/: __init__.py  code_tokenizer.py  git_commit_parser.py  git_repo_extractor.py  py_parser.py  utils.py
lightning_logs/version_62/: events.out.tfevents.1597963932.Eugenes-MBP.Dlink.57801.0  hparams.yaml
notebooks/: 01-test-indexed-datasets.ipynb  02-mbart-on-code.ipynb  03-bart-on-code.ipynb
src/cli/: preprocess.py
src/data/: __init__.py  binarizer.py  distributed_batch_sampler.py  indexed_dataset.py  max_token_batch_sampler.py
src/utils/: __init__.py  git_commit_parser.py
tests/: conftest.py  test_cli.py
tests/fixtures/: model-config.yml  tiny_roberta.yml
tests/resources/: model-config.yml
typings/torch/: __init__.pyi
typings/transformers/: __init__.pyi  activations.pyi  activations_tf.pyi  configuration_albert.pyi  configuration_auto.pyi  configuration_bart.pyi  configuration_bert.pyi  configuration_bert_generation.pyi  configuration_blenderbot.pyi  configuration_camembert.pyi  configuration_ctrl.pyi  configuration_deberta.pyi  configuration_distilbert.pyi  configuration_dpr.pyi  configuration_electra.pyi  configuration_encoder_decoder.pyi  configuration_flaubert.pyi  configuration_fsmt.pyi  configuration_funnel.pyi  configuration_gpt2.pyi  configuration_layoutlm.pyi  configuration_longformer.pyi  configuration_lxmert.pyi  configuration_marian.pyi  configuration_mbart.pyi  configuration_mmbt.pyi  configuration_mobilebert.pyi  configuration_openai.pyi  configuration_pegasus.pyi  configuration_prophetnet.pyi  configuration_rag.pyi  configuration_reformer.pyi  configuration_retribert.pyi  configuration_roberta.pyi  configuration_squeezebert.pyi  configuration_t5.pyi  configuration_transfo_xl.pyi  configuration_utils.pyi  configuration_xlm.pyi  configuration_xlm_prophetnet.pyi  (+195 more)
typings/tree_sitter/: __init__.pyi
(+357 files in other folders)
