[tool.poetry]
name = "gitnetic-ml"
version = "0.1.0"
description = ""
authors = ["mozharovsky <mozharovsky@live.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
tqdm = "^4.46.1"
matplotlib = "^3.2.1"
numpy = "^1.18.5"
pandas = "^1.0.4"
spacy = "^2.2.4"
pydriller = "^1.15.2"
docopt = "^0.6.2"
tree_sitter = "^0.1.1"
wandb = "^0.10.0"
scikit-learn = "^0.23.1"
scipy = "^1.4.1"
transformers = "^3.3.0"
fairseq = {git = "https://github.com/pytorch/fairseq.git"}
pytorch-lightning = "^0.9.0"
jsonlines = "^1.2.0"
dataclasses = { version = "^0.7", python = "<3.7" }
sacrebleu = "^1.4.13"
typing_extensions = "^3.7.4"
traitlets = "^4.3.3"
overrides = "^3.1.0"
typeguard = "^2.9.1"
typing_inspect = "^0.6.0"
datasets = "^1.0.2"
more-itertools = "^8.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^20.8b1"
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
commitizen = "^2.4.0"
cookiecutter = "^1.7.2"

[tool.commitizen]
name = "cz_gitnetic"
version = "0.1.0"
tag_format = "$version"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
