[tool.poetry]
name = "gitnetic"
version = "0.1.0"
description = ""
authors = ["mozharovsky <mozharovsky@live.com>"]

[tool.poetry.scripts]
gitnetic-cli = 'gitnetic.__main__:run_main'

[tool.poetry.dependencies]
# Deep learning toolkit
python = "^3.7"
torch = "^1.6.0"
pytorch-lightning = "^0.9.0"

# NLP toolkit packages
transformers = "^3.3.0"
datasets = "^1.1.2"
spacy = "^2.2.4"
sacrebleu = "^1.4.13"

# Machine learning toolkit
numpy = "^1.18.5"
pandas = "^1.0.4"
scikit-learn = "^0.23.1"
scipy = "^1.4.1"

# Misc toolkit packages
tqdm = "^4.46.1"
matplotlib = "^3.2.1"
wandb = "^0.10.0"
boto3 = "^1.15.11"

# System programming toolkit
pydriller = "^1.15.2"
tree_sitter = "^0.1.1"

# Python types magic and extensions
typing_extensions = "^3.7.4"
typing_inspect = "^0.6.0"
typeguard = "^2.9.1"
more-itertools = "^8.5.0"
jsonlines = "^1.2.0"
overrides = "^3.1.0"
traitlets = "^4.3.3"

# Conditionally installed for backward compatibility with older Python versions
dataclasses = { version = "^0.7", python = "^3.6,<3.7" }

# Optional dependencies
rstcheck = { version = "^3.3.1", optional = true }
docutils = { version = "^0.16", optional = true }
sphinx = { version = "^3.2.1", optional = true }
sphinx-autobuild = { version = "^2020.9.1", optional = true }

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^20.8b1"
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
commitizen = "^2.4.0"
cookiecutter = "^1.7.2"

[tool.commitizen]
name = "cz_gitnetic"
version = "0.1.0"
tag_format = "$version"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
